--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     border: none;
     box-sizing: border-box;
     text-decoration: none;
+    overflow-x: hidden;
 }
 body{
     font-family:sans-serif;
@@ -85,10 +86,59 @@ img{
 .navbar .container .links ul li a:hover{
     color: var(--green);
 }
-.navbar .container button.btn{
-    padding: 4px 6px;
-    font-size: 20px;
-    display: none;
+.navbar .container .btn:hover{
+    border:none;
+    outline: none;
+}
+.navbar .container .btn{
+    font-size: 22px;
+    background: transparent;
+    color: var(--orange);
+    border-radius: 0;
+    border: none;
+    outline: none;
+    padding: 2px 8px;
+    background: var(--orange);
+    color: white;
+}
+.navbar .container .btn i{
+    pointer-events: none;
+}
+@media(max-width:778px){
+    .navbar .container .links{
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 50%;
+        background: var(--orange);
+        height: 100vh;
+        z-index: 20000;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        transform: translateX(-100%);
+        transition: var(--trision);
+        padding-top: 100px;
+    }
+    .navbar .container .links.active{
+        transform: translateX(0);
+    }
+    .navbar .container .links ul{
+        display: block;
+        width: 100%;
+        padding: 0;
+    }
+    .navbar .container .links ul li{
+        padding: 10px 20px;
+        max-width: 10px 0;
+        border-bottom: 1px solid rgba(250,250,250,.3);
+    }
+    .navbar .container .links ul li:hover{
+        background: #b93d03;
+    }
+    .navbar .container .links ul li a{
+        color: rgba(255, 255, 255, 0.95);
+    }
 }
 /* showcase */
 .showcase{
@@ -106,6 +156,21 @@ img{
     font-weight: bold;
     margin-bottom: 20px;
     line-height: 1.4;
+}
+@media(max-width:708px){
+    .showcase .container .text h1{
+        font-size: 40px;
+    }
+}
+@media(max-width:580px){
+    .showcase .container .text h1{
+        font-size: 30px;
+    }
+}
+@media(max-width:580px){
+    .showcase .container .text h1{
+        font-size: px;
+    }
 }
 .showcase .container .text p{
     color:var(--light) ;
@@ -157,7 +222,7 @@ img{
     }  
     .about .container .img{
         /* height: 400px; */
-        flex: 1 1 0;
+        flex: 1 1 10rem;
     } 
     .about .container .img img{
         height: 100%;
@@ -437,4 +502,155 @@ img{
 }
 .shax .container table td span.n{
     font-weight: bold;
+}
+
+/* teach */
+.teach{
+    padding: 80px 0;
+}
+.teach .container h1{
+    text-align: center;
+}
+.teach .container h1::after{
+    left: 50%;
+    width: 120px;
+    border-radius: 4px;
+    transform: translateX(-50%);
+}
+.teach .container .p{
+    text-align: center;
+    margin-bottom: 50px;
+    text-transform: capitalize;
+    font-family: poppins;
+}
+.teach .container .grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    gap: 10px;
+}
+.teach .container .grid .card .pop{
+    background: var(--orange);
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0;
+    transition: var(--trision);
+}
+.teach .container .grid .card .pop h3{
+    line-height: 0.4;
+    margin-top: 15px;
+    text-transform:uppercase;
+    font-weight: 800;
+}
+.teach .container .grid .card .pop p{
+    color: white;
+    font-family: josefin sans;
+}
+.teach .container .grid .card:hover .pop{
+    opacity: 1;
+}
+
+/* carouselExampleSlidesOnly */
+.mycrousel{
+    color: white;
+    background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
+    url(/img/ginny-rose-stewart-UxkcSzRWM2s-unsplash-min.jpg) center center/cover;
+    
+}
+.mycrousel .container h1{
+    text-align: center;
+}
+.mycrousel .container h1::after{
+    left: 50%;
+    width: 120px;
+    border-radius: 4px;
+    background: white;
+    transform: translateX(-50%);
+}
+.mycrousel .carousel-inner .carousel-item img{
+    width: 160px;
+    height: 160px;
+}
+.mycrousel .container #carouselExampleSlidesOnly .carousel-inner .carousel-item {
+    text-align: center;
+    padding: 0 20px;
+}
+.mycrousel .container #carouselExampleSlidesOnly .carousel-inner .carousel-item i{
+    font-size: 45px;
+    margin-bottom: 10px;
+    color: var(--orange);
+}
+.mycrousel .container #carouselExampleSlidesOnly .carousel-inner .carousel-item img{
+    border-radius: 100%;
+    width: 120px;
+    height: 120px;
+    border: 2px solid var(--orange);
+    margin-bottom: 10px;
+}
+.mycrousel .container #carouselExampleSlidesOnly .carousel-inner .carousel-item .name{
+    text-transform: capitalize;
+    color: var(--orange);
+    font-weight: 600;
+    line-height: .6;
+}
+.mycrousel .container #carouselExampleSlidesOnly .carousel-inner .carousel-item .jop{
+    text-transform: capitalize;
+    color: var(--orange);
+    font-weight: normal;
+}
+/* contact */
+.contact{
+    padding: 80px 0;
+}
+.contact .container{
+    overflow: hidden;
+    box-sizing: border-box;
+}
+.contact .container .inner{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    /* padding: 0 30px; */
+}
+.contact .container .inner .img{
+    flex: 1 0 40rem;
+    /* height: 400px;
+    width: 460px; */
+    overflow: hidden;
+}
+.contact .container .inner .img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.contact .container .inner form .both{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+.contact .container .inner form .both input{
+    border: 1px solid rgba(0,0,0,.3);
+    padding: 10px;
+    margin-bottom: 5px;
+    text-transform: capitalize;
+}
+.contact .container .inner form textarea{
+    width: 100%;
+    border: 1px solid rgba(0,0,0,.3);
+    padding: 10px;
+    text-transform: capitalize;
+}
+.contact .container .inner form .btn{
+    display: block;
+    width: 100%;
+}
+.contact .container .inner form .btn:hover{
+    background: rgba(0,0,0,.7);
 }
