--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ img{
     max-width: 1100px;
     width: 100%;
     margin: 0 auto;
-    padding: 10px 30px;
+    padding: 5px 30px;
 }
 .navbar .container{
     display: flex;
@@ -100,11 +100,15 @@ img{
     padding: 2px 8px;
     background: var(--orange);
     color: white;
+    display: none;
 }
 .navbar .container .btn i{
     pointer-events: none;
 }
 @media(max-width:778px){
+    .navbar .container .btn{
+        display: block;
+    }
     .navbar .container .links{
         position: fixed;
         left: 0;
@@ -202,7 +206,7 @@ img{
 /* about */
 .about {
     padding: 80px 0;
-    background: rgba(0, 0, 0, 0.85);
+    /* background: rgba(0, 0, 0, 0.85); */
 }
 .about .container{
     min-height: 70vh;
@@ -214,7 +218,7 @@ img{
     gap: 2rem;
 }
 .about .container p{
-    color: white;
+    color:rgba(0, 0, 0, 0.65);
 }
 .about .container .img{
 
@@ -226,7 +230,7 @@ img{
 .about .container h1{
     font-size: 40px;
     text-transform: uppercase;
-    font-weight: 600;
+    font-weight: 800;
     color: var(--orange);
 }
 /* our program section */
@@ -278,6 +282,11 @@ img{
 .discount .container h1{
     font-size: 44px;
     margin-bottom: 20px;
+}
+@media(max-width:440px){
+    .discount .container h1{
+        font-size: 3epx;
+    }
 }
 .discount .container p{
     color: var(--light);
@@ -384,7 +393,7 @@ img{
 /* coached */
 .coaches{
     padding: 80px 0;
-    background: rgba(0, 0, 0, 0.85);
+    /* background: rgba(0, 0, 0, 0.85); */
 }
 .coaches .container h1{
     text-transform: uppercase;
@@ -411,7 +420,7 @@ img{
     text-align: center;
     line-height: 1.6;
     text-transform: capitalize;
-    color: rgba(255, 255, 255, 0.85);
+    color:rgba(0,0,0,.7);
     margin-bottom: 50px;
 }
 .coaches .container .grid{
@@ -480,7 +489,9 @@ img{
     text-transform: capitalize;
 }
 .shax .container table th{
-    color: var(--orange);
+    color:white ;
+    background: var(--orange);
+    border: none;
 }
 .shax .container table th, td{
     border: 1px dotted var(--orange);
@@ -493,6 +504,9 @@ img{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+.shax .container table td:first-child{
+    background: #b93d03b0;
 }
 .shax .container table td span.n{
     font-weight: bold;
@@ -516,37 +530,45 @@ img{
     margin-bottom: 50px;
     text-transform: capitalize;
     font-family: poppins;
+    color: rgba(0, 0, 0, 0.65);
 }
 .teach .container .grid{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
     gap: 10px;
 }
+.teach .container .grid .card img{
+    height: 100%;
+}
 .teach .container .grid .card .pop{
-    background: var(--orange);
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    opacity: 0;
-    transition: var(--trision);
+   position: absolute;
+   top: 50%;
+   transform: translateY(200%);
+   width: 100%;
+   height: 40%;
+   background: #b93d038f;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   /* transform: translateY(100%); */
+   transition: all .84s ease-in-out;
+   padding: 0;
+   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .teach .container .grid .card .pop h3{
-    line-height: 0.4;
-    margin-top: 15px;
     text-transform:uppercase;
     font-weight: 800;
+    margin: 0;
+    padding: 0;
+    color: white;
 }
 .teach .container .grid .card .pop p{
     color: white;
     font-family: josefin sans;
 }
 .teach .container .grid .card:hover .pop{
-    opacity: 1;
+    transform: translateY(-50%);
 }
 
 /* carouselExampleSlidesOnly */
@@ -554,7 +576,7 @@ img{
     color: white;
     background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),
     url(/img/ginny-rose-stewart-UxkcSzRWM2s-unsplash-min.jpg) center center/cover;
-    
+    padding: 80px 0;
 }
 .mycrousel .container h1{
     text-align: center;
@@ -590,20 +612,84 @@ img{
     text-transform: capitalize;
     color: var(--orange);
     font-weight: 600;
-    line-height: .6;
 }
 .mycrousel .container #carouselExampleSlidesOnly .carousel-inner .carousel-item .jop{
     text-transform: capitalize;
     color: var(--orange);
     font-weight: normal;
 }
+/* ------------------------------- */
+.image-gallery{
+    padding: 20px 0px 70px;
+}
+.image-gallery .container .btns{
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
+    margin-bottom: 10px;
+}
+@media(max-width:991px){
+    .image-gallery .container .btns{
+        width: 100%;
+    }
+}
+.image-gallery .container .btns button{
+    flex: 1;
+    margin-right:2px;
+    padding: 6px 0;
+    background: var(--orange);
+    color: white;
+    border: 1px solid rgba(0, 0, 0, 0.65);
+    text-transform: capitalize;
+    font-family: josefin sans;
+    /* border-radius: 24px; */
+}
+.image-gallery .container .btns button:hover{
+    text-decoration: underline;
+}
+.image-gallery .container .btns button.active{
+    background: var(--green);
+}
+.image-gallery .container .images{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    gap: 20px;
+}
+.image-gallery .container .images img{
+    height: 250px;
+}
+.image-gallery .container .images img.hide{
+    display: none;
+}
+.image-gallery .container .images img.show{
+    display: block;
+    animation: zoom .2s ease-in-out;
+}
+@keyframes zoom{
+    0%{
+        transform: scale(.5);
+        opacity: .8;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+/* ------------------------------- */
 /* contact */
 .contact{
-    padding: 80px 0;
+    padding: 50px 0;
+     background: linear-gradient(rgba(255,255,255,.6),rgba(255,255,255,.5)),
+    url(/img/map.jpg) center center/cover;
+   
 }
 .contact .container{
     overflow: hidden;
     box-sizing: border-box;
+}
+.contact .container p{
+    margin-bottom: 50px;
+    color: rgba(0, 0, 0, 0.65);
 }
 .contact .container .inner{
     display: flex;
@@ -613,11 +699,14 @@ img{
     gap: 10px;
     /* padding: 0 30px; */
 }
+.contact .container .inner form{
+    flex: 1;
+    width: 400px;
+}
 .contact .container .inner .img{
-    flex: 1 0 40rem;
-    /* height: 400px;
-    width: 460px; */
-    overflow: hidden;
+    flex: 1;
+    width: 400px;
+    height: 420px;
 }
 .contact .container .inner .img img{
     width: 100%;
@@ -628,18 +717,43 @@ img{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+    row-gap: 10px;
+    margin-bottom: 10px;
+}
+@media(max-width:991px){
+    .contact .container .inner{
+        flex-direction: column;
+    }
+    .contact .container .inner form{
+        width: 100%;
+    }
+    .contact .container .inner .img{
+        width: 100%;
+    }
+}
+@media(max-width:600px){
+    .contact .container .inner form .both{
+        grid-template-columns: 1fr;
+    }
 }
 .contact .container .inner form .both input{
     border: 1px solid rgba(0,0,0,.3);
     padding: 10px;
     margin-bottom: 5px;
     text-transform: capitalize;
+    background: rgba(0, 0, 0, 0.65);
+    color: var(--orange);
+}
+.contact .container .inner form ::placeholder{
+    color: rgba(255,255,255,.7);
 }
 .contact .container .inner form textarea{
     width: 100%;
+    background: rgba(0, 0, 0, 0.65);
     border: 1px solid rgba(0,0,0,.3);
     padding: 10px;
     text-transform: capitalize;
+    color: var(--orange);
 }
 .contact .container .inner form .btn{
     display: block;
@@ -647,4 +761,109 @@ img{
 }
 .contact .container .inner form .btn:hover{
     background: rgba(0,0,0,.7);
+}
+
+/* footer */
+footer
+{
+    padding: 40px 0 10px;
+    background: linear-gradient(rgba(0,0,0,.85),rgba(0,0,0,.85)),
+    url(/img/total-shape-TY_Ce5d2G-k-unsplash-min.jpg) center center/cover;
+    
+}
+footer .container {
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+}
+footer .container div h2{
+    text-transform: capitalize;
+    font-weight: 600;
+    color: var(--orange);
+    margin-bottom: 20px;
+    font-size: 25px;
+    font-family: josefin sans;
+}
+footer .container div ul{
+    margin: 0;
+    padding: 0;
+}
+footer .container div ul li{
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    color: rgba(255,255,255,.6);
+}
+footer .container div ul.flex li{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+footer .container div ul li .icon{
+    background: var(--orange);
+    color: black;
+    height: 30px;
+    width: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 8px;
+    border-radius: 24px;
+}
+footer .container div .form {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--orange);
+    padding:6px 10px;
+    border-radius: 24px;
+}
+footer .container div .form i{
+    color: white;
+}
+footer .container div .form input{
+    width: 100%;
+    background: transparent;
+    color: white;
+    padding-right: 17px;
+}
+footer hr{
+    color: rgba(255,255,255,.5);
+    width: 90%;
+    margin: 0 auto 10px;
+}
+footer .copy{
+    text-align: center;
+    color: rgba(255,255,255,.35);
+    font-size: 14px;
+    font-style: italic;
+}
+footer .copy span{
+    color: rgba(255, 255, 255, 0.8);
+}
+
+
+
+
+
+
+
+
+
+
+@media(max-width:440px){
+    .about .container h1{
+        font-size: 30px;
+    }
+    .discount .container h1{
+        font-size: 33px;
+    }
+    .featured .container h1{
+        font-size: 26px;
+    }
+    .training .container h1{
+        font-size:px;
+    }
 }
