--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,17 @@ img{
     max-width: 1100px;
     width: 100%;
     margin: 0 auto;
-    padding: 5px 30px;
+    padding:0 30px;
+}
+.navbar{
+    background:rgba(0, 0, 0, 0.9);
+    padding-bottom: 0;
 }
 .navbar .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid rgba(250,250,250,.3);
 }
 .navbar .container .logo{
     display: flex;
@@ -64,11 +69,13 @@ img{
     font-size: 28px;
 }
 .navbar .container .logo .name{
-    color: black;
+    color: rgba(255, 255, 255, 0.85);
     font-size: 22px;
+    font-weight: 800;
 }
 .navbar .container .logo .name span{
     color:var(--orange);
+    font-weight: normal;
 }
 .navbar .container .links ul{
     display: flex;
@@ -78,13 +85,13 @@ img{
     padding: 4px 8px;
 }
 .navbar .container .links ul li a{
-    color: black;
+    color: rgba(255, 255, 255, 0.8);
     text-transform: capitalize;
     font-weight: 600;
     text-decoration: none;
 }
 .navbar .container .links ul li a:hover{
-    color: var(--green);
+    color: var(--orange);
 }
 .navbar .container .btn:hover{
     border:none;
@@ -236,12 +243,13 @@ img{
 /* our program section */
 .program{
     padding: 40px 0 80px;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 20, 0.8);
 }
-.program .container p{
-    text-transform: capitalize;
-    color:white;
+.program .container .p{
+    color:rgba(255, 255, 255, 0.8);
     margin-bottom: 50px;
+    font-size: 20px;
+    letter-spacing: normal;
 }
 .program .container .grid{
     display: grid;
@@ -249,22 +257,25 @@ img{
     gap: 30px;
 }
 .program .container .grid .card{
-    padding: 20px 40px 20px 20px;
-    text-transform: capitalize;
+    padding: 20px 30px;
     box-shadow: 0 0 10px rgba(0,0,0,.1);
 }
 .program .container .grid .card p{
-    color: #000;
+    color: rgba(0, 0, 0, 0.65);
     font-family: poppins;
-
+    line-height: 1.7;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-size: 18px;
 }
 .program .container .grid .card h3{
+    text-transform: capitalize;
+    margin-bottom: 25px;
     color: var(--orange);
 }
 .program .container .grid i{
-    font-size: 35px;
+    font-size: 40px;
     color: var(--orange);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .program .container .grid h3{
     font-weight: 600;
@@ -343,7 +354,7 @@ img{
     /* background: linear-gradient(rgba(255,255,255,.69),rgba(255,255,255,.9)),
     url(/img/john-arano-h4i9G-de7Po-unsplash-min.jpg) center center/cover;
     */
-    background: rgb(0, 0, 0,.85);
+    background: rgb(0, 0, 0,.65);
     padding: 50px 0 100px;
 }
 .featured .container .p{
@@ -379,6 +390,8 @@ img{
 }
 .featured .container .grid .card .text p{
     line-height: 1.6;
+    color: rgba(0, 0, 0, 0.65);
+
 }
 @media(max-width:1000px){
     .featured .container{
@@ -542,8 +555,9 @@ img{
 }
 .teach .container .grid .card .pop{
    position: absolute;
-   top: 50%;
-   transform: translateY(200%);
+   bottom: 50%;
+   left: 0;
+   opacity: 0;
    width: 100%;
    height: 40%;
    background: #b93d038f;
@@ -551,8 +565,8 @@ img{
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   /* transform: translateY(100%); */
-   transition: all .84s ease-in-out;
+   transform: translateY(100%);
+   transition: all .4s ease-in-out;
    padding: 0;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -568,7 +582,7 @@ img{
     font-family: josefin sans;
 }
 .teach .container .grid .card:hover .pop{
-    transform: translateY(-50%);
+    opacity: 1;
 }
 
 /* carouselExampleSlidesOnly */
@@ -636,6 +650,7 @@ img{
     justify-content: space-around;
     width: 60%;
     margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 @media(max-width:991px){
     .image-gallery .container .btns{
@@ -651,7 +666,7 @@ img{
     border: 1px solid rgba(0, 0, 0, 0.65);
     text-transform: capitalize;
     font-family: josefin sans;
-    /* border-radius: 24px; */
+    border-radius: 24px;
 }
 .image-gallery .container .btns button:hover{
     text-decoration: underline;
@@ -688,7 +703,7 @@ img{
 /* contact */
 .contact{
     padding: 50px 0;
-     background: linear-gradient(rgba(255,255,255,.6),rgba(255,255,255,.5)),
+     background: linear-gradient(rgba(255,255,255,.86),rgba(255,255,255,.5)),
     url(/img/map.jpg) center center/cover;
    
 }
@@ -699,6 +714,18 @@ img{
 .contact .container p{
     margin-bottom: 50px;
     color: rgba(0, 0, 0, 0.65);
+}
+.contact .container p span{
+    color:var(--orange);
+    text-transform: uppercase;
+    font-weight: bold;
+}
+.contact .container h3{
+    text-transform: capitalize;
+    font-size: 30px;
+    font-family: josefin sans;
+    color: black;
+    font-weight: bold;
 }
 .contact .container .inner{
     display: flex;
@@ -715,7 +742,7 @@ img{
 .contact .container .inner .img{
     flex: 1;
     width: 400px;
-    height: 420px;
+    height: 440px;
 }
 .contact .container .inner .img img{
     width: 100%;
@@ -853,7 +880,33 @@ footer .copy span{
     color: rgba(255, 255, 255, 0.8);
 }
 
-
+.pop{
+   left: 90%;
+   bottom: 50px;
+   transform: translateX(-90%);
+    position: fixed;
+    height: 50px;
+    width: 40px;
+    background:white;
+    color: orange;
+    z-index: 200000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--orange);
+    transition: var(--trision);
+    display: none;
+    cursor: pointer;
+}
+.pop:hover{
+    background: transparent;
+}
+.pop a{
+    color: var(--orange);
+}
+.pop i{
+    transform: rotate(180deg);
+}
 
 
 
