--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ img{
 }
 /* showcase */
 .showcase{
-    background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),url(/img/anastase-maragos-fG0p4Qh_aWI-unsplash-min.jpg) center center/cover;
+    background: linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),url(/img/anastase-maragos-fG0p4Qh_aWI-unsplash-min.jpg)  no-repeat center center/cover;
     height: 100vh;
     width: 100%;
     color: white;
